tests/checker/diagnostics/0124_adt_record_update_bool_field_01.ml
type rec_alpha = { left : int; right : bool }
let base_alpha = { left = 0; right = true }
let _ = { base_alpha with right = 1 }
